[package]
name = "link_os"
version = "0.1.0"
edition = "2018"
[profile.dev]
#panic = "abort"
[profile.release]
#panic = "abort"
[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.9.6"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.3"
pc-keyboard = "0.5.0"
[dependencies.lazy_static]
version = "1.0.0"
features = ["spin_no_std"]
[package.metadata.bootimage]
build-command = ["build"]
run-command = ["D:\\QEMU\\qemu-system-x86_64.exe","-drive","format=raw,file={}"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial","stdio",
    "-display","none"
]
test-success-exit-code = 33
test-timeout = 30
[[test]]
name = "stack_overflow"
harness = false
